# web_hw13

hw13/: main.py  pyproject.toml  test.db
hw13/docs/: conf.py
hw13/docs/_build/doctrees/: environment.pickle  index.doctree
hw13/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw13/hw11/: schemas.py
hw13/hw11/conf/: config.py
hw13/hw11/database/: db.py  models.py
hw13/hw11/postgres-data/global/: pg_control  pg_internal.init
hw13/hw11/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
hw13/hw11/repository/: contacts.py  users.py
hw13/hw11/routes/: auth.py  contacts.py  users.py
hw13/hw11/services/: auth.py  email.py
hw13/migrations/versions/: 0c6fd398dcb1_init.py
hw13/postgres-data/: postmaster.pid
hw13/postgres-data/base/13481/: 1247  1249  1259  16390  16393  16411  16413  16419  16420  16422  16424  16426  16430  16432  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+9 more)
hw13/postgres-data/global/: pg_control  pg_internal.init
hw13/postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
hw13/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
hw13/postgres-data/pg_xact/: 0000
hw13/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
hw13_2/: pyproject.toml
hw13_2/quotes/quotes/: settings.py
hw13_2/quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw13_2/quotes/users/: views.py
hw13_2/quotes/utils/: migration.py
(+13 files in other folders)
